@@ -4,7 +4,7 @@ A team-shared document summarizing the accumulated design decisions for the data
 
 **Prerequisite** — The one-line project intro, tech stack, directory map, and domain glossary live in the repo-root `CLAUDE.md`. This document covers the design details not (or only briefly) covered there.
 
-Updated: 2026-05-21
+Updated: 2026-05-22
 
 ---
 
@@ -361,6 +361,37 @@ On top of the existing `site` / `project` (V4–V6):
 - **Must be isolated from TO-BE PG**: even on the same server, use a different port, different data directory, and different OS account.
 - The installer itself: jpackage or WiX/NSIS (TBD).
 
+### 11.3 Building the installer (current state)
+
+Lives under `ModernizeProData/installer/`. Three-step pipeline produces a single `setup.exe` (7-Zip SFX) that bundles a C# language dispatcher and three per-language .msi payloads. End users run `setup.exe`; the dispatcher reads their language pick and invokes the matching .msi via `msiexec /i`.
+
+**Prerequisites on the build host**: JDK 21+ on PATH (ships `jpackage`), WiX Toolset 3.14 under `C:\Program Files (x86)\WiX Toolset v3.14\bin\`, Node 18+ with npm, PowerShell 5.1+.
+
+```powershell
+cd ModernizeProData\installer
+.\build.ps1 -Language all       # dist\ModernizeProData-{en,ko,ja}-1.0.0.msi (~274 MB each)
+.\launcher\build-launcher.ps1   # dist\Launcher.exe (~200 KB)
+.\package-sfx.ps1               # dist\ModernizeProData-1.0.0-setup.exe (~818 MB)
+```
+
+Each .msi is jpackage-produced with `--win-per-user-install` so the install goes into `%LOCALAPPDATA%\ModernizeProData\` with no UAC prompt. The three .msi files differ only in `JpProductLanguage` / bundled `MsiInstallerStrings_<lang>.wxl`; runtime image, fat jar and React bundle are identical across them.
+
+**What the installer asks**: Role (Coordinator / Worker / Standalone), Language, and a read-only display of the Hardware ID. Coordinator URL, license file and admin credentials are entered in-app on first boot, not by the installer.
+
+**First-boot flow**:
+- **Coordinator / Standalone**: WebView opens the React UI. If no license is loaded, `App.tsx`'s `/api/v1/health/info` probe sees `licenseStatus=MISSING` and routes to `/license-setup`. Master picks the .lic file through a JavaFX FileChooser bridge (see 11.4), the file is uploaded, then the master signs in.
+- **Worker**: A JavaFX form takes the Coordinator URL, runs an anonymous `/api/v1/health` reachability probe, then asks username + password. On successful login the JWT is handed to the WebView via `bootstrap_token` / `bootstrap_user` URL params (read by `frontend/src/bootstrap-from-url.ts`) so the user is not asked to sign in a second time inside the WebView.
+
+### 11.4 JavaFX 21 WebView quirks (worked around in code)
+
+JavaFX 21's bundled WebKit has three quirks that surface only inside the packaged app (Chromium under `npm run dev` does not exhibit any of them). All three have stable workarounds; if you add a new endpoint or screen, reuse the same patterns.
+
+- **`window.location.replace()` and `window.location.href = …` change the URL but do NOT reload the page.** React stays mounted on the previous route forever, so the user is silently stuck. *Fix*: never call them from React — use `useNavigate()` from react-router. The 403/`LICENSE_MISSING` interceptor in `api/client.ts` uses `history.replaceState` + a manual `popstate` event.
+- **`<input type="file">` renders, but clicking it never opens a native picker.** *Fix*: a sentinel-prompt bridge — React calls `window.prompt('OPEN_LICENSE_FILE')`, the JavaFX prompt handler in `Launcher.wireJsDialogs` intercepts that exact string, shows a real `FileChooser`, and returns the chosen file's contents as the prompt return value. Reuse this pattern for any future file-upload UI.
+- **`multipart/form-data` POST NPEs inside `HTTP2Loader.<init>`.** *Fix*: add a `text/plain` (or `application/octet-stream` / `application/json`) body variant on the same endpoint. `LicenseController.initial-setup` ships both — the React UI uses the raw-body path; the multipart path is kept for callers outside the WebView.
+
+If you add a new file-upload endpoint, either reuse the raw-body pattern or explicitly test the multipart path *inside the packaged WebView*, not just in `npm run dev`.
+
 ---
 
 ## 12. Test Strategy (Backend-mandatory)
@@ -542,8 +573,179 @@ project + TO-BE DDL exist) are unreachable in a freshly-opened Simple Browser.
 Bugs that surface only past those gates will look fine there. Verify in real
 Chrome before declaring "it works."
 
+### 16.3 Global state transitions don't live inside a page-bound effect
+
+The frontend mock run-engine used to mark an `activeRun` as `completed` from
+inside `ExecutionPage`'s `useEffect`:
+
+```ts
+// ExecutionPage.tsx
+useEffect(() => {
+  if (computeElapsedMs(activeRun) >= TOTAL_RUN_MS) {
+    finishActiveRun(projectId);
+    setProjectRunStatus(projectId, 'completed');
+  }
+}, [tick, activeRun, projectId]);
+```
+
+This worked while the user stayed on `ExecutionPage`, but if they navigated
+away mid-run (Dashboard, AllProjects, etc.), the page unmounted and no one
+detected the completion. The sidebar `phase chip` for `test` / `rehearsal`
+stayed colored ("running" variant) until the user returned to `ExecutionPage`.
+
+Fix: any state transition that has to fire regardless of route belongs in
+`AppShell.tsx` (always mounted), or in a zustand `subscribe` callback. The
+current implementation polls `useExecutionPreflightStore.byProject` every
+500 ms from `AppShell` and calls `finishActiveRun` + `setProjectRunStatus`
+when elapsed crosses `TOTAL_RUN_MS`. Replace with WS events once the real
+backend run engine is wired.
+
+### 16.4 Dashboard mapped-counts: backend rules vs. zustand cache
+
+The per-project Dashboard reads `useMappingEditsStore` (localStorage zustand,
+hydrated from backend by `MappingPage` on mount). SiteOverview (AllProjects)
+can't rely on that — projects the user hasn't opened in `MappingPage` have
+no cached edits — so it fetches `mappingImportApi.listRules(projectId)` per
+project in parallel and counts mapped rules itself.
+
+The `mapped` rule definition is shared:
+
+- `strategy === 'null'` or `'default'` → mapped
+- `strategy === 'expression'` with non-empty `asisColumn[]` or `transformRule`
+  → mapped
+- `strategy === 'skip'` → not mapped
+
+When mapping rules → DDL tables, mirror MappingPage's qualified-first /
+short-fallback lookup (`{tobeSchema}.{tobeTable}` first, then bare
+`{tobeTable}`). Skipping the fallback under-counts when `rules.tobeSchema`
+is `null` but DDL `schemaName` is populated (or vice versa).
+
 ---
 
+## 17. Scheduler & External Trigger Integration (added 2026-05-24)
+
+Coordinator-side scheduling: internal Quartz nightly trigger + external scheduler
+REST/CLI entry. Both gated by a solution-level mutex (only one can be active at
+a time).
+
+### 17.1 Architecture
+
+```
+                  ┌─ Quartz Nightly Job (internal) ─┐
+                  │                                  │
+ (Control-M / cron / etc.) ─ REST ──────────────────┼─→ RunService ─→ Spring Batch
+                                                     │   (lock + insert run_history
+              UI manual run ──────────────────────────┘    + WS dispatch to Worker)
+```
+
+Three trigger paths converge on `RunService.startRun()` (single entry point) →
+`SELECT FOR UPDATE` on `projects.run_status` for idempotency → insert
+`run_history` row → dispatch to Worker via STOMP (`/topic/worker/{workerId}/tasks`).
+
+### 17.2 Internal mode — common vs individual
+
+`solution_settings.internal_mode` is `'common' | 'individual' | NULL`.
+
+- `common` — all projects fire at `solution_settings.internal_common_time`.
+- `individual` — each project fires at its own `projects.schedule_start_time`.
+- `NULL` — only valid when `internal_enabled = false`. When the toggle goes ON
+  the user must explicitly pick a mode; otherwise save is rejected.
+
+Default time on mode selection is `22:00` (pre-filled, editable). FE forces a
+hard validation: in `individual` mode, every project must have a `start_time`
+or Save is blocked.
+
+`SchedulerInitializer.rescheduleAllNightly()` is called on app startup and on
+every Solution Settings change. It deletes all `NIGHTLY_GROUP` triggers and
+re-registers based on current `internal_mode`. Incremental diff-rebuild is a
+future optimization (see 17.7).
+
+### 17.3 API token auth — register, not generate
+
+Token issuance is **inverted from the original design**: customers generate
+tokens on the external scheduler side (Control-M / JP1 / etc.) and **register**
+them via UI paste. The tool never generates tokens.
+
+- `api_credentials.token_hash` — SHA-256 hex, used for auth lookup.
+- `api_credentials.token_plain` — **stored plaintext** (PoC requirement; see
+  17.6 for the security tradeoff).
+- `api_credentials.display_prefix` + `display_last4` — for masked display.
+- Min token length: 16 chars (4 prefix + 8 hidden + 4 last4).
+- Registration revokes the previous default credential automatically.
+
+`ApiTokenAuthFilter` accepts any Bearer token, with these exceptions:
+
+- `WK-…` prefix → defer to `WorkerTokenAuthFilter`
+- 3-segment dotted (`x.y.z`) → defer to `JwtAuthFilter` (heuristic)
+- Otherwise: SHA-256 the token, look up by hash. Hit → `ROLE_API_CLIENT`.
+
+### 17.4 Phase semantics for runs
+
+`RunService.resolveRunTypeFromPhase()` maps phase → runType:
+
+| Phase | runType | Notes |
+|---|---|---|
+| `test` | `test` | dry-run test |
+| `rehearsal` | `rehearsal` | dry-run rehearsal |
+| `ready` | `cutover` | **production cut-over fires here** |
+| `cutover` | _(empty)_ | already running — new runs rejected |
+| others | _(empty)_ | not eligible |
+
+The `cutover` phase represents an **in-progress** cut-over (not a
+"ready-to-cut" state). On completion, the project transitions to `hypercare`.
+
+### 17.5 Trigger source enum
+
+`run_history.trigger_source` is one of `internal` / `external` / `cli` /
+`manual`. Names follow UI labels (`Internal scheduler` / `External
+integrations`). Legacy `nightly` / `rest` / `manual_ui` rows from earlier
+migrations are accepted by the CHECK constraint but never written by current
+code.
+
+### 17.6 Security tradeoff — plaintext token storage
+
+`api_credentials.token_plain` stores the registered token in plaintext. This
+contradicts the original design principle of hash-only storage but was added
+because:
+
+- Users want to view the registered token on different sessions / by different
+  master accounts.
+- Trigger examples docs in the UI embed the live token for copy-paste.
+
+**Implications for production**:
+
+- A DB leak (backup theft, direct SQL access) immediately compromises the
+  scheduler credentials.
+- This will likely be flagged in customer security review (FISC / J-SOX /
+  PCI-DSS contexts).
+- Pre-production deploy: confirm with customer security team, or switch to
+  encrypted storage (AES + master key) before going live.
+
+The columns / methods involved carry `⚠ PoC requirement, security tradeoff`
+comments for traceability.
+
+### 17.7 Intentionally out of scope (PoC 2nd or later)
+
+- **Quartz incremental rebuild** — current `rescheduleAllNightly()` is full
+  rebuild (delete-all + re-register). For high project counts this slows
+  startup; switch to diff-based add/remove/modify later.
+- **`/runs/all` bulk transaction** — currently a `for` loop calls
+  `RunService.startRun()` per project, each in its own `@Transactional`. With
+  100+ projects this becomes 100 sequential transactions. Future: bulk insert
+  + parallel `ExecutorService`.
+- **Token / SolutionSettings cache** — `CredentialService.authenticate()` and
+  `SolutionSettingsRepository.get()` hit DB on every request. Adding Spring
+  Cache (`@Cacheable` + `@CacheEvict` on update) cuts hot-path DB load.
+- **Encrypted token storage** — see 18.6.
+- **OSS scheduler vendor verification** — Control-M Workbench / Rundeck /
+  Hinemos integration tests not run. Manual verification via Windows Task
+  Scheduler + LAN-cross curl was sufficient for PoC.
+- **SIEM (syslog) forwarding** — UI field was removed since BE has no syslog
+  emitter. Re-add when SIEM integration is a real requirement.
+
+---
+
+## 18. Further Reading
 ## 17. Site Export — Client-side zip Delivery (added 2026-05-21)
 
 The bulk-export feature that lets a Coordinator user package all artifacts of
@@ -677,6 +879,123 @@ download trigger) does **not** need to change.
 
 ---
 
+## 18. Pre-flight Gate — Execution Readiness Checks (rewritten 2026-05-27)
+
+Readiness gate before Execution Start run AND before Versions Request Review.
+The two gates share the same check engine but apply different thresholds.
+
+### 18.1 Two gate contexts
+
+| Gate | Where | Threshold |
+|---|---|---|
+| **Start run** | `ExecutionPage` → RunHeader | pin pinned snapshot + selected tables × every check pass + `runMode !== null` |
+| **Request Review** | `VersionsPage` → SnapshotDetailView | cached result exists + **selectedTables covers all DDL TO-BE tables** + every check pass |
+
+Selection can be a subset (partial migration is a real requirement). startrun
+allows running that subset. Request Review demands the snapshot proven
+end-to-end clean → coverage of the entire DDL is required.
+
+### 18.2 The seven checks
+
+| id | scope | Data source | Pass when |
+|---|---|---|---|
+| `csv-arrived` | per-table | `site.csvPath` + per-AS-IS file probe (`csv-preview/{name}?limit=1`) | path set + every needed `{asisTable}.csv` (or `{schema}.{table}.csv`) present |
+| `ddl-asis` | project | live DDL store | AS-IS DDL imported |
+| `ddl-tobe` | project | live DDL store | TO-BE DDL imported |
+| `conn-tobe` | project | live BE `tobeDbApi.testConnection` | fields filled + BE returns success |
+| `tobe-bindings` | per-table | snapshot.bindings | every selected TO-BE table has ≥1 binding with sources |
+| `unmapped-cols` | per-table | snapshot.rules + TO-BE DDL | every column has a rule (`null` / `default` / producing `expression`) or an explicit `skip` rule |
+| `asis-unmapped` | **per-AS-IS-table** | snapshot.rules + AS-IS DDL | every column in the AS-IS table is referenced by some rule |
+
+- `project` rows show one inline detail (no expand).
+- `per-table` rows are expandable, showing the per-table breakdown.
+- `asis-unmapped` keys per-table rows by AS-IS physical name (not TO-BE) so
+  the Fix button can navigate to the AS-IS side of MappingPage.
+
+### 18.3 Pin requirement
+
+Execution requires a pinned snapshot. Without one the SnapshotDisplay panel
+shows an amber banner, and TableSelector / Pre-flight / Start are all
+disabled. Pin eligibility (`isPinEligible`) is enforced per phase — see
+`store/snapshots.ts`.
+
+### 18.4 RunMode derivation (`deriveRunMode(phase, env)`)
+
+Mirrors BE `RunService.resolveRunTypeFromPhase`:
+
+| env | phase | runMode |
+|---|---|---|
+| production | ready | cutover |
+| production | other | null (blocked) |
+| non-prod | rehearsal | rehearsal |
+| non-prod | ready / cutover / hypercare / done | null (blocked — ready run は production 限定) |
+| non-prod | planning / analysis / test / sign-off | test |
+
+Phase auto-advance on Start is **forward-only** (e.g., starting a test run
+from `planning` advances to `test`; starting a test from `sign-off` does
+**not** regress to `test`).
+
+### 18.5 Result cache (per-snapshot)
+
+`store/executionPreflight.byProject[projectId].bySnapshot[snapshotId]` holds
+`{ runAt, selectedTables, results }`. This is the **single source of truth**
+for both the Execution display and the Versions Request Review gate. The
+old project-wide `preflightResults` field has been removed (persist v5).
+
+When the pinned snapshot changes on Execution, the display automatically
+switches to that snapshot's cached result (or empty = "not run yet"). No
+separate state reset needed.
+
+### 18.6 Fix routing
+
+| Check id | Destination |
+|---|---|
+| `csv-arrived` | SiteSettings → CSV section (aggregate-only Fix — `fixIsProjectWide: true`) |
+| `ddl-asis` / `ddl-tobe` | `/settings` with `state.highlightSide` |
+| `conn-tobe` | SiteSettings → TO-BE DB section |
+| `tobe-bindings` / `unmapped-cols` | `/mapping` with `state.fixTarget = { kind, table }`. MappingPage matches by qualified name / internalName / physicalName (`tt.short`). |
+| `asis-unmapped` | same as above but `kind: 'unmapped-asis'`, table = AS-IS physical name |
+
+### 18.7 Demo modes
+
+- `?demo=preflight` — 7 fail fixture (worst case).
+- `?demo=run-fail` — 7 pass fixture, then user can `⚡ Simulate failure` mid-run.
+
+### 18.8 BE concurrency note (workaround in place)
+
+`SiteCsvPreviewController` reads via DuckDB through a shared `DuckDbService`.
+Concurrent requests collide with `"Invalid Input Error: Attempting to execute
+an unsuccessful or closed pending query result"`. Workaround: FE calls
+`csv-preview` **sequentially** (`for...of await`) in `startPreflight` instead
+of `Promise.all`. See handoff `2026-05-27-execution-preflight-real.md`.
+
+### 18.9 Decision history
+
+- 8 checks → 7 (`approved-snapshot` removed; snapshot integrity is now
+  enforced via the pin-required model + Versions Request Review gate).
+- `TableSelector` is intentionally kept to support partial-migration
+  scenarios — it limits the run scope (Execution) but does NOT relax the
+  Request Review gate.
+- `unmapped-cols` covers all columns, not just NOT-NULL no-default ones.
+  Rationale: aligns with `DashboardPage` `isMappingRuleMapped` semantics.
+- `asis-unmapped` rows are keyed by AS-IS table, contrary to the other
+  per-table checks which are keyed by TO-BE table. Required so the Fix
+  button can pass the correct table to MappingPage AS-IS side.
+
+### 18.10 Out of scope (deferred)
+
+- BE `POST /api/v1/projects/{id}/preflight/run` — preflight still runs on
+  the frontend; only `csv-preview` and `tobe-db/test-connection` call BE.
+- `CheckStage` / `ExtractStage` (in dev merge but stubs) — once they write
+  to `stage_instances`, preflight can read authoritative completion flags.
+- BE `DuckDbService` concurrency safety / connection pool — required to
+  drop the FE sequential workaround.
+- React style warning (`border` / `borderColor` shorthand mix) in the
+  Preflight panel — cosmetic.
+
+---
+
+## 19. Further Reading
 ## 18. License (Ed25519 .lic verification — finalized 2026-05-22)
 
 ### 18.1 Goals
@@ -692,7 +1011,7 @@ the in-app UI.
 - **One global keypair**: HQ holds the single `private.pem`; every shipped
   backend binary embeds the matching `public.pem` at build time. New
   customers ≠ new keypair; new keypair = full backend rebuild + redeploy.
-- **Public key embed path**: `backend/src/main/resources/license/public-key.pem`.
+- **Public key embed path**: `backend/src/main/resources/license/public.pem` (same filename the issuer produces — drop the file as-is, no rename).
 - **Fingerprint** = first 16 bytes of SHA-256 over the public key DER, hex
   encoded. Stored in each `.lic` as `publicKeyFp` so corruption / wrong-key
   uploads can be diagnosed quickly.
@@ -836,7 +1155,164 @@ Setup / WiX dependency.
 
 ---
 
-## 19. Further Reading
+## 19. Windows Installer — Coordinator MVP (Phase 1, 2026-05-24)
+
+### 19.1 Goals
+
+Ship the main tool (Coordinator backend + React frontend) as a single Windows
+.msi. Double-click install → native window opens → user logs in. PoC 1st-round
+demo deliverable. Three downstream modes (Client / Standalone / Coordinator)
+remain Phase 2 — a first-boot wizard branches there from the same installer.
+
+### 19.2 Architecture (single fat jar inside JavaFX shell)
+
+```
+%LOCALAPPDATA%\ModernizeProData\                   (per-user install)
+├── ModernizeProData.exe          ← jpackage launcher
+├── app\modernize-pro-data-*.jar  ← Spring Boot fat jar (BOOT-INF/classes/static/
+│                                   = Vite dist)
+└── runtime\                       ← bundled JRE + JavaFX modules (jlink)
+```
+
+```
+double-click ModernizeProData.exe
+  -> Launcher.main (jpackage sets -Dmpd.gui.enabled=true)
+  -> GuiApp.launch (JavaFX Application)
+       -> Stage opens with "Starting..." HTML
+       -> Spring Boot started on background thread
+       -> ApplicationReadyEvent fires
+       -> Platform.runLater -> WebView.load("http://localhost:8080/")
+  -> User logs in; window close = SpringApplication.exit + Platform.exit
+```
+
+### 19.3 Decision log
+
+- **PowerShell, not Maven jpackage plugin** — orchestration mirrors
+  `issuer/build-exe.ps1`. Single source of pattern for both modules.
+- **Single fat jar with static under classpath:/static/** — spring-boot-maven-
+  plugin already produces this layout; SPA fallback controller forwards non-
+  `/api`/`/ws`/`/assets` paths to `/index.html`.
+- **.msi via WiX 3.14** — chosen for Japan finance market acceptance. WiX 4 is
+  not compatible with jpackage; build.ps1 explicitly checks 3.x.
+- **Per-user install** — `--win-per-user-install` puts everything under
+  `%LOCALAPPDATA%`, no UAC, no admin rights. Standalone deployment matches the
+  isolated-customer-PC story.
+- **JavaFX WebView (not browser-auto-open)** — UX requirement is "native
+  desktop app, not a browser tab". JavaFX is the lightest path in our Java
+  stack to embed React. Native dependency on JavaFX SDK 21.0.4 from Gluon, not
+  in JDK 21 by default.
+- **JavaFX as `provided` Maven scope** — keeps the fat jar lean (no JavaFX in
+  BOOT-INF/lib). jpackage gets the runtime modules from JavaFX SDK via
+  `--module-path` and `--add-modules javafx.controls,javafx.web`.
+- **PG pre-installed assumption (Phase 1)** — host native PostgreSQL on
+  localhost:5433, DB `mpd_meta`, user/pw `mpd`/`mpd` (matches CLAUDE.md
+  default). Bundling PG portable is deferred. If the DB is missing, Spring
+  startup fails and the WebView shows an error page (Phase 1 simple; Phase 2
+  wizard improves it).
+- **`mpd.gui.enabled` system property** — Launcher branches dev vs installed
+  on this flag. `mvn spring-boot:run` does not set it, so JavaFX never
+  initializes during dev. jpackage launcher sets it, so the installed mode
+  always runs the JavaFX shell.
+
+### 19.4 Frontend build divergence (tsc gate)
+
+`npm run build` is `tsc -b && vite build`. Other team members' work-in-
+progress branches on `dev` may leave the `tsc -b` gate failing for code
+unrelated to the installer. The installer pipeline therefore calls `npx
+vite build` directly — Vite's own bundler still validates the build, and
+unblocking the installer is more valuable than enforcing the strict TS gate at
+this stage. The dev workflow (`npm run build` from a feature branch) keeps the
+gate.
+
+### 19.5 Static frontend wiring on the backend
+
+- `frontend/.env.production`: `VITE_API_BASE_URL=` (empty) → axios prefix is
+  empty → requests go to `/api/v1/...` relative → same-origin Spring Boot.
+- `SpaFallbackController`: regex-routes any non-`/api`/`/ws`/`/assets`/`/favicon`/`/mpd*`
+  path to `forward:/index.html`. React Router takes over from there.
+- `SecurityConfig`: anonymous permitAll for `/`, `/index.html`, `/favicon.svg`,
+  `/favicon.ico`, `/mpd.png`, `/mpd_lic.png`, `/assets/**`. Login still happens
+  through `/api/v1/auth/**` (also anonymous, pre-existing).
+
+### 19.6 application-prod.yml
+
+Bundled in fat jar. Activated by `-Dspring.profiles.active=prod`. Overrides
+nothing the user has to care about — only:
+
+- `spring.datasource.url` default points to `localhost:5433/mpd_meta`
+  (matches CLAUDE.md, not the Spring Boot Maven Plugin's docker-compose
+  default of 5432).
+- Logging tightened to INFO root, WARN for `org.hibernate.SQL` and
+  `org.springframework.security`.
+- Vite dev-server origin removed from CORS (only `http://localhost:8080`).
+- `modernize.license.public-key` falls back to `classpath:license/public.pem`
+  and accepts `MPD_LICENSE_PUBKEY` env override.
+
+### 19.7 Build pipeline (installer/build.ps1)
+
+7 phases, in order:
+
+0. **Verify environment** — `jpackage`, WiX 3.x (auto-detects `Program Files
+   (x86)\WiX Toolset v3.14\bin` or v3.11 paths), `npm`.
+1. **JavaFX SDK cache** — first run downloads
+   `openjfx-21.0.4_windows-x64_bin-sdk.zip` (~30MB) from Gluon to
+   `installer/cache/`. Subsequent runs skip.
+2. **Frontend** — `npx vite build` in `frontend/`.
+3. **Stage frontend** — `frontend/dist/*` → `backend/src/main/resources/static/`.
+4. **Backend** — `./mvnw -DskipTests package` in `backend/` produces fat jar.
+5. **Stage jar** — fat jar copied into `installer/staging/app/`.
+6. **Icon** — `make-ico.ps1` wraps `frontend/public/mpd.png` as PNG-embedded
+   `.ico` (same pattern as issuer). Cached at `installer/assets/mpd.ico`.
+7. **jpackage** — `--type msi --win-per-user-install --module-path
+   <javafx-sdk-lib> --add-modules javafx.controls,javafx.web,...`. Adds
+   shortcut + Start Menu group + dir chooser.
+
+Output: `installer/dist/ModernizeProData-1.0.0.msi`, ~130–160MB (JRE + JavaFX
+modules + fat jar).
+
+### 19.8 Critical rules carried over from issuer
+
+- All `.ps1` files **must keep UTF-8 BOM** — PowerShell 5.1 on Korean Windows
+  reads BOM-less UTF-8 as CP949 and corrupts non-ASCII content. Keep build
+  output ASCII to be safe across encoding regressions.
+- **Do not "simplify" `installer/staging/`'s `Remove-Item -Recurse`** — same
+  cautionary tale as issuer's `license/` preservation. If we ever stage
+  generated state (license, signing materials, captured certs) here, it MUST
+  be preserved across rebuilds.
+- **System Look-and-Feel only** (Swing-style components stay native) —
+  Cross-Platform L&F on Korean Windows breaks Hangul rendering in jpackage'd
+  JRE. JavaFX WebView is unaffected, but if we ever add Swing dialogs in the
+  installer they must respect this.
+
+### 19.9 Verification flow
+
+Build: `cd ModernizeProData\installer; .\build.ps1`. Output is the .msi under
+`installer\dist\`.
+
+Smoke test (clean Windows account or VM):
+
+1. PG 18 running on `localhost:5433/mpd_meta` (user/pw `mpd`/`mpd`).
+2. Double-click .msi → next/next/install. No UAC prompt expected.
+3. Start Menu → ModernizeProData → window opens "Starting...", then loads the
+   login page within ~10s.
+4. master/password (UserBootstrap default) → Dashboard.
+5. Close window → no orphan processes.
+
+PG-missing path: open the window, see the WebView error page. Phase 2 wizard
+will turn this into an interactive setup.
+
+### 19.10 Phase 2 / 3 forward references
+
+- **Phase 2** — same .msi gets a first-boot mode selector (Coordinator /
+  Client / Standalone). Client mode drops Spring Boot + DB entirely, leaving
+  the JavaFX shell pointed at a remote Coordinator's URL.
+- **Phase 3** — License hardening (per-customer keypair, fingerprint binding,
+  password-encrypted private.pem). The Phase 1 installer assumes the existing
+  single global keypair from `feature/license`.
+
+---
+
+## 20. Further Reading
 
 - `CLAUDE.md` — stack, conventions, domain glossary, local run.
 - `docs/handoff/` — time-stamped handoff notes (read the most recent first).
